Fix content type button alignment

--- a/static/css/components/button.css
+++ b/static/css/components/button.css
@@ -74,3 +74,57 @@
   display: block;
   width: 100%;
 }
+
+.button.is-vertical {
+  font-size: 14px;
+  padding: 9px 20px;
+}
+
+/**
+ * Icons
+ */
+
+.button svg {
+  position: relative;
+  top: 1px;
+  margin-right: 7px;
+  display: inline-block;
+  vertical-align: top;
+  width: 1em;
+  height: 1em;
+}
+
+.button path {
+  fill: currentColor;
+}
+
+.button.is-vertical svg {
+  width: 3em;
+  height: 3em;
+  margin: -3px auto 2px;
+  display: block;
+}
+
+/**
+ * Group of buttons
+ */
+
+.button-group {
+  user-select: none;
+  text-align: center;
+}
+
+.button-group .button {
+  margin: 0 3px 10px;
+  width: 98px;
+}
+
+.button-group-break {
+  display: block;
+}
+
+@media (--sm-viewport) {
+  .button-group-break {
+    display: none;
+  }
+}
