--- a/static/css/components/post.css
+++ b/static/css/components/post.css
@@ -210,6 +210,7 @@
   right: 0;
   overflow: hidden;
   padding: 0 2px;
+  z-index: 10;
 }
 
 .post-inner.is-unboxed .post-option {
