--- a/static/css/components/utils.css
+++ b/static/css/components/utils.css
@@ -7,3 +7,7 @@
 .clearfix:after {
   clear: both;
 }
+
+.hidden {
+  display: none;
+}
